invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_91.src
.IPPcode24
GETCHAR GF@e int bool@false